--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,4 +5,7 @@ RUN mkdir -p /app && \
     git clone https://github.com/rearc/quest /app
 WORKDIR /app
 RUN npm install
-CMD [node]
+
+EXPOSE 3000
+
+CMD ["/usr/local/bin/node", "."]
