Use an lb service
See #41

--- a/k8s/rearc.yml
+++ b/k8s/rearc.yml
@@ -23,8 +23,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: rearc-service
+  name: rearc-service-lb
 spec:
+  type: LoadBalancer
   selector:
     app: rearc
   ports:
