Update environment for container
See #41

--- a/k8s/rearc.yml
+++ b/k8s/rearc.yml
@@ -17,6 +17,9 @@ spec:
       containers:
       - name: rearc
         image: 629354604262.dkr.ecr.us-west-2.amazonaws.com/rearc/quest:latest
+        env:
+          - name: SECRET_WORD
+            value: "TwelveFactor"
         ports:
           - containerPort: 3000
 ---
