--- a/k8s/rearc.yml
+++ b/k8s/rearc.yml
@@ -26,12 +26,29 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: rearc-service-lb
+  name: rearc-service-np
 spec:
-  type: LoadBalancer
-  selector:
-    app: rearc
   ports:
-    - protocol: TCP
-      port: 3000
-      targetPort: 3000
+    - port: 3000
+      targetPort: 80
+      protocol: TCP
+  type: NodePort
+  selector:
+    app.kubernetes.io/name: rearc
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: rearc-ingress
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /*
+            backend:
+              service: rearc-service-np
+              port: 80
