--- a/k8s/rearc.yml
+++ b/k8s/rearc.yml
@@ -60,20 +60,20 @@ metadata:
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:629354604262:certificate/064dc7c7-24d8-4794-9ab6-5e13591c9594
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
-    alb.ingress.kubernetes.io/subnets: subnet-54970a2c, subnet-c717a88d
+    alb.ingress.kubernetes.io/subnets: subnet-54970a2c, subnet-c717a88d, subnet-8e98f4d3, subnet-d316f2f9
 spec:
   rules:
     - host: hamdance.com
       http:
         paths:
-          - path: /*
+          - path: /
             pathType: Prefix
             backend:
               service: 
                 name: ssl-redirect
                 port: 
                   name: use-annotation
-          - path: /*
+          - path: /
             pathType: Prefix
             backend:
               service:  
