--- a/k8s/aws-load-balancer-controller.yml
+++ b/k8s/aws-load-balancer-controller.yml
@@ -805,7 +805,7 @@ spec:
     spec:
       containers:
       - args:
-        - --cluster-name=your-cluster-name
+        - --cluster-name=default
         - --ingress-class=alb
         image: amazon/aws-alb-ingress-controller:v2.2.0
         livenessProbe:
