--- a/k8s/rearc.yml
+++ b/k8s/rearc.yml
@@ -34,20 +34,7 @@ spec:
       protocol: TCP
   type: LoadBalancer
   selector:
-    app.kubernetes.io/name: rearc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: rearc-np
-spec:
-  ports:
-    - port: 80
-      targetPort: 3000
-      protocol: TCP
-  type: NodePort
-  selector:
-    app.kubernetes.io/name: rearc
+    app: rearc
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -64,10 +51,10 @@ metadata:
     alb.ingress.kubernetes.io/subnets: subnet-54970a2c, subnet-c717a88d, subnet-8e98f4d3, subnet-d316f2f9
 spec:
   defaultBackend:
-    resource:
-      apiGroup: k8s.example.com
-      kind: Service
+    service:
       name: rearc-lb
+      port:
+        number: 80 
   rules:
     - host: hamdance.com
       http:
@@ -76,13 +63,13 @@ spec:
             pathType: Prefix
             backend:
               service: 
-                name: ssl-redirect
+                name: rearc-lb 
                 port: 
-                  name: use-annotation
+                  number: 80 
           - path: /
             pathType: Prefix
             backend:
               service:  
                 name: rearc-np
                 port: 
-                  number: 80
+                  number: 80 
