--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,7 +76,7 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config="remote.hostname=app.terraform.io" -backend-config="remote.organization=brick-house" -backend-config="remote.workspaces.name=rearc-quest-infra"
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
