--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # Crash log files
 crash.log
+*.log
+test_output/
 
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
