--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,7 +76,9 @@ jobs:
 
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
-        run: terraform init -reconfigure
+        run: |
+          terraform workspace select test
+          terraform init
 
       - name: Terraform Test
         run: |
