--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -87,15 +87,15 @@ jobs:
           sudo apt-get -y install golang
           terraform workspace select test
           cd test
-          go test -timeout 30m | tee results.log
-          terratest_log_parser -testlog results.log -outputdir test-results
+          go test -timeout 30m | tee test_output.log
+          terratest_log_parser -testlog test_output.log -outputdir test_output
 
 
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: test-results/results.xml
+          files: test_output/*.xml
 
 
       # Checks that all Terraform configuration files adhere to a canonical format
