--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,7 +95,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: test_output/*.xml
+          files: test_output/report.xml
 
 
       # Checks that all Terraform configuration files adhere to a canonical format
