--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -113,15 +113,15 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
-          path: artifacts
+          path: test_output
 
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action/composite@v1
         with:
-          files: artifacts/**/*.xml
+          files: test_output/**/*.xml
 
   terraform:
-    name: "Terraform Testing"
+    name: "Terraform Apply"
     needs: terraform-test
     runs-on: ubuntu-latest
     environment: prod
