--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -90,6 +90,12 @@ jobs:
           go test -timeout 30m | tee test_output.log
           terratest_log_parser -testlog test_output.log -outputdir test_output
 
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v2
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: 'test_output/report.xml'
+
       - name: Upload Unit Test Results
         if: always()
         uses: actions/upload-artifact@v2
