Continue on error
See #57

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,7 @@ jobs:
     name: "Terraform Testing"
     runs-on: ubuntu-latest
     environment: test
+    continue-on-error: true
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -79,15 +80,21 @@ jobs:
         run: |
           TF_WORKSPACE=test terraform init
 
-      - name: Terraform Test
+      - name: Prepare Terraform Test
         run: |
           curl -LsS https://raw.githubusercontent.com/gruntwork-io/gruntwork-installer/master/bootstrap-gruntwork-installer.sh | bash /dev/stdin --version v0.0.22
           GITHUB_OAUTH_TOKEN=${{ secrets.ACCESS_TOKEN }} gruntwork-install --binary-name 'terratest_log_parser' --repo 'https://github.com/gruntwork-io/terratest' --tag 'v0.13.13'
           sudo apt-get -y update
           sudo apt-get -y install golang
           terraform workspace select test
+
+      - name: Run Terraform Tests
+        run: |
           cd test
           go test -timeout 30m | tee test_output.log | true
+
+      - name: Generate Terraform Test Report
+        run: |
           terratest_log_parser -testlog test_output.log -outputdir test_output
 
       - name: Publish Test Report
